hphp/hack/test/typecheck/modules/multiple_module_decls.php
<?hh
<<file:__EnableUnstableFeatures('modules')>>

module A {}
module A {}
